--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Matt Moynihan / Personal Website"
+title                    : "Matt Moynihan"
 title_separator          : "-"
 name                     : &name "Matt Moynihan"
 description              : &description "I'm a PhD Student at Trinity College Dublin working with the V-SENSE group on a bunch of computer vision projects! I'm personally interested in Volumetric Video and other 3D media."
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Matt Moynihan"
   avatar           : "profile.png"
-  bio              : "PhD Candidate, interest in Computer Vision and 3D content creation"
+  bio              : "PhD Candidate, interested in Computer Vision and 3D content creation"
   location         : "Dublin, Ireland"
   employer         : 
   pubmed           : 
