--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,4 +10,4 @@ main:
     url: /cv/
     
   - title: "Code"
-    url: https://github.com/mjkmoynihan
+    url: https://github.com/mjkmoynihan?tab=repositories
